# drf-api-kickstart

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
custom_commands/management/commands/: add_model.py  make_custom_command.py  make_view.py  removeapp.py  set_secret_key.py  setup_crud_view.py  startapp.py  test_command.py
project/: settings.py  urls.py
project/settings/: dev.py  local.py  production.py  qa.py
