[project]
name = "drf-api-kickstart"
version = "0.1.0"
description = "This project aims to simplify Django project setup by including the most useful packages."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "django-extensions>=4.1",      # Adds additional features to Django.
  "django>=5.2.3",               # Django Framework.
  "django-environ>=0.12.0",      # Allows for environment variables management.
  "djangorestframework>=3.16.0", # Enables building APIs with Django.
  "django-seed>=0.3.1",          # Provides data seeding functionality.
  "factory-boy>=3.3.3",          # Adds support for factories in tests.
  "django-storages>=1.14.6",     # Enables the use of S3 storage.
  "django-import-export>=4.3.8", # Adds data import and export capabilities.
  "drf-spectacular>=0.28.0",     # Automatically generates API documentation.
  "django-redis>=6.0.0",         # Integrates Redis as a cache backend.
  "channels>=4.2.2",             # Enables WebSocket communication.
  "mysqlclient>=2.2.7",          # Provides support for MySQL database.
  "psycopg>=3.2.9",              # Provides support for PostgreSQL database.
  "djongo>=1.2.31",              # Enables MongoDB integration with Django.
  "oracledb>=3.2.0",             # Enables OracleDB integration with Django.
  "django-mssql-backend>=2.8.1", # Enables MSSQL database integration with Django.
  "mariadb>=1.1.12",             # Provides support for MariaDB database.
  "requests>=2.32.4",            # Provides request/response monitoring and profiling.
  "jinja2>=3.1.6",               # Adds support for Jinja templates.
  "pytest-django>=4.11.1",       # Facilitates unit testing with Django.
  "django-sonar>=0.1.8",         # Request monitoring for django applications.
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.6", # Python linter and formatter.
]

[tool.ruff]
# Set the maximum line length to 79 characters.
line-length = 79

lint.ignore = [
  "F403", # Ignores wildcard imports.
  "F405", # Cannot resolve import.
  "E501", # Ignores line too long.
]
