[project]
name = "drf-api-kickstart"
version = "0.88.0"
description = "This project aims to simplify Django project setup by including the most useful packages."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "django-extensions>=4.1",      # Adds additional features to Django.
  "django>=5.2.13",              # Django Framework.
  "django-environ>=0.13.0",      # Allows for environment variables management.
  "djangorestframework>=3.17.1", # Enables building APIs with Django.
  "django-seed>=0.3.1",          # Provides data seeding functionality.
  "factory-boy>=3.3.3",          # Adds support for factories in tests.
  "django-storages>=1.14.6",     # Enables the use of S3 storage.
  "django-import-export>=4.4.0", # Adds data import and export capabilities.
  "drf-spectacular>=0.29.0",     # Automatically generates API documentation.
  "django-redis>=6.0.0",         # Integrates Redis as a cache backend.
  "channels>=4.3.2",             # Enables WebSocket communication.
  "mysqlclient>=2.2.8",          # Provides support for MySQL database.
  "psycopg>=3.3.4",              # Provides support for PostgreSQL
  "oracledb>=3.4.2",             # Enables OracleDB integration with Django.
  "django-mssql-backend>=2.8.1", # Enables MSSQL database integration with Django.
  "mariadb>=1.1.14",             # Provides support for MariaDB database.
  "requests>=2.33.1",            # Provides request/response monitoring and profiling.
  "jinja2>=3.1.6",               # Adds support for Jinja templates.
  "pytest-django>=4.12.0",       # Facilitates unit testing with Django.
  "django-sonar>=0.5.1",         # Request monitoring for django applications.
  "django-mongo-backend>=0.29",  # Enables MongoDB integration with Django.
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.12", # Python linter and formatter.
]

[tool.ruff]
# Set the maximum line length to 79 characters.
line-length = 79

lint.ignore = [
  "F403", # Ignores wildcard imports.
  "F405", # Cannot resolve import.
  "E501", # Ignores line too long.
]
